[package]
name = "bittorrent_client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.0"
clap = { version = "4.5.29", features = ["derive"] }
nom = "8"
regex = "1"
reqwest = "0.12.9"
sha1_smol = "1.0.1"
tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"

[dev-dependencies]
mockito = "1.6.1"
tokio-test = "0.4.4"
